--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,5 @@
 :root {
   --app-yellow: #fe7;
   --app-black: #252725;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-html {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  letter-spacing: -1px;
-  
+  --app-light-grey: #737373;
 }
