--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 :root {
   --app-yellow: #fe7;
+  --app-yellow--hover: rgba(255, 239, 119, 0.863);
   --app-black: #252725;
   --app-light-grey: #737373;
 }
