--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -29,4 +29,8 @@
         cursor: pointer;
         box-shadow: rgba(0, 0, 0, 0.08) 0px 1px 1px 0px;
     }
+
+    &:focus {
+        outline: none;
+    }
 }
