--- a/src/components/search-results/SearchResults.scss
+++ b/src/components/search-results/SearchResults.scss
@@ -1,11 +1,16 @@
 .search-results {
     padding-inline-start: 0;
+    background:white;
+    border-radius: 5px;
+    border: 1px solid rgba(214, 214, 214, 0.37);
+    height: 25rem;
+    overflow: scroll;
+
     li {
         list-style-type: none;
-        margin: .5rem 0;
         padding: .8rem 1rem;
         border: 1px solid rgba(214, 214, 214, 0.37);
-        border-left: 5px solid var(--app-yellow);
+        border-left: 5px solid white;
 
         &:hover {
             border: 1px solid var(--app-yellow);
