--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,7 @@
   &__current-location {
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     > h4 {
       align-self: center;
